--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -38,14 +38,14 @@ headlineNumbers:
         value: covidOccupiedMVBeds
         tooltip: Number of COVID-19 patients currently in mechanical ventilation beds, reported on {date}
 
-  - caption: People vaccinated (weekly)
+  - caption: People vaccinated
     valueItems: 
       - label: First dose total
-        value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+        value: cumPeopleVaccinatedFirstDoseByPublishDate
         tooltip: Total number of people who have received the first dose of COVID-19 vaccine, up to {date}
 
       - label: Second dose total
-        value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+        value: cumPeopleVaccinatedSecondDoseByPublishDate
         tooltip: Total number of people who have received the second dose of COVID-19 vaccine, up to {date}
 
     
@@ -1248,6 +1248,107 @@ cards:
 
 # {{ EndDevOnlyBlock }}
 
+##############################################################################################################################
+
+  - heading: People who have received vaccinations, by report date (daily)
+    cardType: multiAreaStatic
+    locationAware:
+      included: 
+        areaType:
+          - overview
+          - nation
+
+    fullWidth: true
+    abstract: >
+      Number of people who have received a vaccination for COVID-19, by day in which the vaccine was reported.
+    
+    download:
+      - cumPeopleVaccinatedFirstDoseByPublishDate
+      - cumPeopleVaccinatedSecondDoseByPublishDate
+
+    options:
+      type: radio
+      heading: null
+      choices:
+        # - UK total
+        - By nation
+
+    UK total:
+    
+      tabs: 
+               
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+        
+          fields:
+            - label: Date
+              value: date
+              type: date
+              tooltip: Week ending date
+
+            - label: "Cumulative: 1st dose"
+              value: cumPeopleVaccinatedFirstDoseByPublishDate
+              type: numeric
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+
+            - label: "Cumulative: 2nd dose"
+              value: cumPeopleVaccinatedSecondDoseByPublishDate
+              type: numeric
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+ 
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/healthcare/cardVaccinations.md
+
+
+    By nation:
+
+      tabs:
+          - heading: 1st dose data
+            tabType: table
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+        
+            fields:
+            - label: Date
+              value: date
+              type: date
+              tooltip: Date
+
+            - label: "cumulative: 1st dose"
+              value: cumPeopleVaccinatedFirstDoseByPublishDate
+              type: numeric
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+
+          - heading: 2nd dose data
+            tabType: table
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+        
+            fields:
+            - label: Date
+              value: date
+              type: date
+              tooltip: Date
+
+            - label: "cumulative: 2nd dose"
+              value: cumPeopleVaccinatedSecondDoseByPublishDate
+              type: numeric
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine    
+
+          - heading: About 
+            tabType: metadata
+            filename: cardMetadata/healthcare/cardVaccinations.md
+
+
 
 ############################################################################################################################## 
 
@@ -1484,102 +1585,4 @@ cards:
             tabType: metadata
             filename: cardMetadata/healthcare/cardVaccinations.md
 
-##############################################################################################################################
 
-  - heading: People who have received vaccinations, by report date (daily)
-    cardType: multiAreaStatic
-    locationAware:
-      included: 
-        areaType:
-          - overview
-          - nation
-
-    fullWidth: true
-    abstract: >
-      Number of people who have received a vaccination for COVID-19, by day in which the vaccine was reported.
-    
-    download:
-      - cumPeopleVaccinatedFirstDoseByPublishDate
-      - cumPeopleVaccinatedSecondDoseByPublishDate
-
-    options:
-      type: radio
-      heading: null
-      choices:
-        # - UK total
-        - By nation
-
-    UK total:
-    
-      tabs: 
-               
-        - heading: Data
-          tabType: table
-          params:
-            - key: areaType
-              sign: "="
-              value: overview
-        
-          fields:
-            - label: Date
-              value: date
-              type: date
-              tooltip: Week ending date
-
-            - label: "Cumulative: 1st dose"
-              value: cumPeopleVaccinatedFirstDoseByPublishDate
-              type: numeric
-              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
-
-            - label: "Cumulative: 2nd dose"
-              value: cumPeopleVaccinatedSecondDoseByPublishDate
-              type: numeric
-              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
- 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/healthcare/cardVaccinations.md
-
-
-    By nation:
-
-      tabs:
-          - heading: 1st dose data
-            tabType: table
-            params:
-              - key: areaType
-                sign: "="
-                value: nation
-        
-            fields:
-            - label: Date
-              value: date
-              type: date
-              tooltip: Date
-
-            - label: "cumulative: 1st dose"
-              value: cumPeopleVaccinatedFirstDoseByPublishDate
-              type: numeric
-              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
-
-          - heading: 2nd dose data
-            tabType: table
-            params:
-              - key: areaType
-                sign: "="
-                value: nation
-        
-            fields:
-            - label: Date
-              value: date
-              type: date
-              tooltip: Date
-
-            - label: "cumulative: 2nd dose"
-              value: cumPeopleVaccinatedSecondDoseByPublishDate
-              type: numeric
-              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine    
-
-          - heading: About 
-            tabType: metadata
-            filename: cardMetadata/healthcare/cardVaccinations.md
