removed banner for scotland error

--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,3 +1,5 @@
+# {{ StartDevOnlyBlock }}
+
 - appearByUpdate: "2021-01-11"
   disappearByUpdate: "2021-01-12"
   displayUri: 
@@ -5,7 +7,7 @@
   body: >
     Owing to issues with Public Health Scotland Open Data API service, deaths by date of death for 
     Scotland are missing, and the UK totals therefore exclude Scotland. 
-
+# {{ EndDevOnlyBlock }}
 
 # {{ StartDevOnlyBlock }}
 
