amended tab order in vaccination cards and updated abstract

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1262,7 +1262,7 @@ cards:
     abstract: >
       Number of people who have received a vaccination for COVID-19, by day on which the vaccine was reported. Data are reported daily, and include all 
       vaccination events that are entered on the relevant system at the time of extract. This includes reported vaccines that were administered up to and 
-      including the date shown.
+      including the date shown. Numbers are only reported for Scotland and Wales on weekdays.
     
     download:
       - newPeopleVaccinatedFirstDoseByPublishDate
@@ -1281,8 +1281,6 @@ cards:
     
       tabs: 
 
-# {{ StartDevOnlyBlock }} 
-
         - heading: 1st dose daily
           tabType: chart
           barType: normal
@@ -1295,16 +1293,6 @@ cards:
             - label: number of people received 1st dose
               value: newPeopleVaccinatedFirstDoseByPublishDate
               tooltip: Daily reported number of people who received the first dose of COVID-19 vaccine
-              type: bar
-              colour: 0
-              rollingAverage: false
-            
-        - heading: 1st dose cumulative
-          tabType: chart
-          fields:
-            - label: number of people received 1st dose
-              value: cumPeopleVaccinatedFirstDoseByPublishDate
-              tooltip: Cumulative reported number of people who received the first dose of COVID-19 vaccine
               type: bar
               colour: 0
               rollingAverage: false
@@ -1325,6 +1313,16 @@ cards:
               colour: 0
               rollingAverage: false
             
+        - heading: 1st dose cumulative
+          tabType: chart
+          fields:
+            - label: number of people received 1st dose
+              value: cumPeopleVaccinatedFirstDoseByPublishDate
+              tooltip: Cumulative reported number of people who received the first dose of COVID-19 vaccine
+              type: bar
+              colour: 0
+              rollingAverage: false
+            
         - heading: 2nd dose cumulative
           tabType: chart
           fields:
@@ -1334,9 +1332,6 @@ cards:
               type: bar
               colour: 0
               rollingAverage: false            
-
-
-# {{ EndDevOnlyBlock }} 
 
         - heading: Data
           tabType: table
@@ -1356,15 +1351,15 @@ cards:
               type: numeric
               tooltip: Daily reported number of people who received the first dose of COVID-19 vaccine
 
-            - label: "1st dose total"
-              value: cumPeopleVaccinatedFirstDoseByPublishDate
-              type: numeric
-              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
-
             - label: "2nd dose daily"
               value: newPeopleVaccinatedSecondDoseByPublishDate
               type: numeric
               tooltip: Daily reported number of people who received the second dose of COVID-19 vaccine
+
+            - label: "1st dose total"
+              value: cumPeopleVaccinatedFirstDoseByPublishDate
+              type: numeric
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
 
             - label: "2nd dose total"
               value: cumPeopleVaccinatedSecondDoseByPublishDate
@@ -1379,8 +1374,6 @@ cards:
     By nation:
 
       tabs:
-
- # {{ StartDevOnlyBlock }}
 
           - heading: 1st dose daily
             tabType: chart
@@ -1398,22 +1391,6 @@ cards:
                 type: bar
                 rollingAverage: false
 
-          - heading: 1st dose cumulative
-            tabType: chart
-            barType: stack
-            colours: [0, 9, 3, 10] # areaNames in alphabetical order
-            params:
-              - key: areaType
-                sign: "="
-                value: nation
-
-            fields:
-              - label: "1st dose total"
-                value: cumPeopleVaccinatedFirstDoseByPublishDate
-                tooltip: Cumulative reported number of people who received the first dose of COVID-19 vaccine in each nation
-                type: bar
-                rollingAverage: false
-
           - heading: 2nd dose daily
             tabType: chart
             barType: stack
@@ -1427,6 +1404,22 @@ cards:
               - label: "2nd dose daily"
                 value: newPeopleVaccinatedSecondDoseByPublishDate
                 tooltip: Daily reported number of people who received the second dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false     
+
+          - heading: 1st dose cumulative
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "1st dose total"
+                value: cumPeopleVaccinatedFirstDoseByPublishDate
+                tooltip: Cumulative reported number of people who received the first dose of COVID-19 vaccine in each nation
                 type: bar
                 rollingAverage: false
 
@@ -1445,8 +1438,6 @@ cards:
                 tooltip: Cumulative reported number of people who received the second dose of COVID-19 vaccine in each nation
                 type: bar
                 rollingAverage: false
-
- # {{ EndDevOnlyBlock }}
 
           - heading: 1st dose data
             tabType: table
@@ -1549,18 +1540,6 @@ cards:
               type: bar
               colour: 0
               rollingAverage: false
-            
-        - heading: 1st dose cumulative
-          tabType: chart
-          fields:
-            - label: number of people received 1st dose
-              value: cumPeopleVaccinatedFirstDoseByVaccinationDate
-              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
-              type: bar
-              colour: 0
-              rollingAverage: false
-
- # {{ StartDevOnlyBlock }} 
 
         - heading: 2nd dose weekly
           tabType: chart
@@ -1577,7 +1556,17 @@ cards:
               type: bar
               colour: 0
               rollingAverage: false
-            
+
+        - heading: 1st dose cumulative
+          tabType: chart
+          fields:
+            - label: number of people received 1st dose
+              value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+              type: bar
+              colour: 0
+              rollingAverage: false
+          
         - heading: 2nd dose cumulative
           tabType: chart
           fields:
@@ -1587,9 +1576,7 @@ cards:
               type: bar
               colour: 0
               rollingAverage: false
-
- # {{ EndDevOnlyBlock }}         
-            
+        
         - heading: Data
           tabType: table
           params:
@@ -1608,15 +1595,15 @@ cards:
               type: numeric
               tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
 
+            - label: "2nd dose weekly"
+              value: weeklyPeopleVaccinatedSecondDoseByVaccinationDate
+              type: numeric
+              tooltip: Weekly number of people who received the second dose of COVID-19 vaccine              
+
             - label: "1st dose total"
               value: cumPeopleVaccinatedFirstDoseByVaccinationDate
               type: numeric
               tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
-
-            - label: "2nd dose weekly"
-              value: weeklyPeopleVaccinatedSecondDoseByVaccinationDate
-              type: numeric
-              tooltip: Weekly number of people who received the second dose of COVID-19 vaccine 
 
             - label: "2nd dose total"
               value: cumPeopleVaccinatedSecondDoseByVaccinationDate
@@ -1647,24 +1634,6 @@ cards:
                 type: bar
                 rollingAverage: false
 
-          - heading: 1st dose cumulative
-            tabType: chart
-            barType: stack
-            colours: [0, 9, 3, 10] # areaNames in alphabetical order
-            params:
-              - key: areaType
-                sign: "="
-                value: nation
-
-            fields:
-              - label: "1st dose total"
-                value: cumPeopleVaccinatedFirstDoseByVaccinationDate
-                tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine in each nation
-                type: bar
-                rollingAverage: false
-
- # {{ StartDevOnlyBlock }} 
-
           - heading: 2nd dose weekly
             tabType: chart
             barType: stack
@@ -1678,6 +1647,22 @@ cards:
               - label: "2nd dose weekly"
                 value: weeklyPeopleVaccinatedSecondDoseByVaccinationDate
                 tooltip: Weekly number of people who received the second dose of COVID-19 vaccine in each nation
+                type: bar
+                rollingAverage: false               
+
+          - heading: 1st dose cumulative
+            tabType: chart
+            barType: stack
+            colours: [0, 9, 3, 10] # areaNames in alphabetical order
+            params:
+              - key: areaType
+                sign: "="
+                value: nation
+
+            fields:
+              - label: "1st dose total"
+                value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+                tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine in each nation
                 type: bar
                 rollingAverage: false
 
@@ -1696,8 +1681,6 @@ cards:
                 tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine in each nation
                 type: bar
                 rollingAverage: false
-
- # {{ EndDevOnlyBlock }} 
 
           - heading: 1st dose data
             tabType: table
